# GREYLOCK

./: .env.example  .gitignore  .prettierignore  AUDIT.md  BUILD.md  Brewfile  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  V0_2_PLAN.md  eslint.config.mjs  greylock-kickoff.md  greylock-questions.md  greylock-spec.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  style-audit.md  tsconfig.json  vcpkg.json  vitest.config.ts
.github/workflows/: ci.yml  v1-freeze.yml
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/_lib/: current-user.ts  dashboard-data.ts
app/admin/: page.module.css  page.tsx
app/connect/: page.module.css  page.tsx
app/login/: page.module.css  page.tsx
components/account-table/: AccountTable.module.css  AccountTable.tsx
components/admin/: AdminForms.module.css  AuditViewer.tsx  EnrollForm.tsx  ItemList.tsx  RevokeForm.tsx
components/chrome/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx
components/dashboard/: DashboardLayout.module.css  DashboardLayout.tsx  DashboardPoller.tsx  DomainColumn.tsx  SummaryStrip.tsx
components/empty-state/: EmptyState.module.css  EmptyState.tsx
components/modal/: Modal.module.css  Modal.tsx
components/passkey/: PasskeyEnrollButton.tsx  PasskeyLoginButton.module.css  PasskeyLoginButton.tsx
components/plaid/: DomainPicker.module.css  DomainPicker.tsx  PlaidLinkButton.module.css  PlaidLinkButton.tsx
components/progress-bar/: BillionProgressBar.module.css  BillionProgressBar.tsx
components/stat-card/: StatCard.module.css  StatCard.tsx
components/transaction-table/: TransactionTable.module.css  TransactionTable.tsx
data/: supplier_map.json
docs/: API.md  ARCHITECTURE.md  BUILD_LOG.md  CONTRIBUTING.md  MIGRATION_V0.1_TO_V0.2.md  PLAID_SETUP.md  QA_PROMPT.md  RUNBOOK.md  SECRETS_RECOVERY.md  SECURITY_AUDIT.md  SPEC.md  THREAT_MODEL.md  UI_INTERACTION_AND_FEATURES.md  UI_REDESIGN_V0.3.md  WORKFLOW.md
docs/agents/: AGENT-ARCH.md  AGENT-AUDIT-LOG.md  AGENT-AUTH.md  AGENT-COMPUTE.md  AGENT-CRYPTO.md  AGENT-DB.md  AGENT-PLAID.md  AGENT-SYNC.md  AGENT-UI.md
docs/qa/: QA-SEC-phase-2.md  QA-SEC-phase-3.md
lib/audit/: chain.ts  index.ts  sanitizer.ts  service.ts
lib/auth/: allowlist.ts  enrollment-token.ts  index.ts  rate-limit.ts  session.ts  webauthn.ts  wrapped-dek-reader.ts
lib/compute/: billion-progress.ts  cash-only.ts  currency.ts  index.ts  month-net.ts  net-worth.ts
lib/crypto/: aad.ts  envelope.ts  index.ts  kdf.ts  master-key.ts  pcc-dek.ts  user-dek.ts  zeroize.ts
lib/db/: client.ts  index.ts  migrate.ts  sqlcipher-key.ts
lib/ipc/: index.ts  keybridge-client.ts  keybridge-protocol.ts  keybridge-server.ts  peer-cred.ts
lib/plaid/: client.ts  index.ts  mappers.ts  service.ts  token-broker.ts
lib/runtime/: services-registry.ts
lib/sync/: index.ts  keybridge-client-bridge.ts  orchestrator.ts  snapshot-writer.ts
lib/types/: domain.ts  index.ts  services.ts  ui.ts  zod-schemas.ts
prisma/: schema.prisma
proposals/: consolidation_ui.cpp  consolidation_ui.h  ui_category_trends.cpp  ui_category_trends.h  ui_net_worth.cpp  ui_net_worth.h  ui_shovel_intelligence.cpp  ui_shovel_intelligence.h  ui_shovel_score.cpp  ui_shovel_score.h  ui_sync_status.cpp  ui_sync_status.h  ui_updates.cpp  ui_updates.h
scripts/: _admin-boot.ts  admin-audit-verify.ts  admin-enroll.ts  admin-revoke-all.ts  admin-revoke.ts  admin-rotate-master.ts  download-fonts.ts  generate-dev-cert.sh  sync.ts
scripts/db/: dev-key.ts
server/: main.cpp
server/audit/: AuditEvent.h  CanonicalBytes.cpp  CanonicalBytes.h  IAuditLog.h  Sanitizer.cpp  Sanitizer.h  SqlAuditLog.cpp  SqlAuditLog.h  StubAuditLog.cpp  StubAuditLog.h
server/auth/: AuthHandlers.cpp  AuthHandlers.h  AuthRateLimitInternal.h  EnrollmentToken.cpp  EnrollmentToken.h  HmacSha1.h  PassphraseHash.cpp  PassphraseHash.h  Session.cpp  Session.h  SessionMiddleware.cpp  SessionMiddleware.h  Totp.cpp  Totp.h
server/data/: AccountsHandler.cpp  AccountsHandler.h  BudgetsHandler.cpp  BudgetsHandler.h  CategoriesHandler.cpp  CategoriesHandler.h  EntitiesHandler.cpp  EntitiesHandler.h  EntityMembership.cpp  EntityMembership.h  PlaidLinkHandler.cpp  PlaidLinkHandler.h  TransactionsHandler.cpp  TransactionsHandler.h  V3ObjectsHandler.cpp  V3ObjectsHandler.h
server/db/: Database.cpp  Database.h  Migrations.cpp  Migrations.h
server/discovery/: SupplierMapHandler.cpp  SupplierMapHandler.h
server/http/: HealthzHandler.cpp  (+3 more)
src/: main.cpp
tests/: test_audit_chain_canonical_bytes_no_double_count.cpp  test_audit_replay.cpp  test_audit_sanitizer.cpp  test_audit_writer.cpp  test_auth_endpoints.cpp  test_auth_enrollment_token.cpp  test_auth_passphrase.cpp  test_auth_rate_limit.cpp  test_auth_service.cpp  test_auth_session.cpp  test_auth_totp.cpp  test_backend_client.cpp  test_command_palette.cpp  test_consolidation_service.cpp  test_crypto.cpp  test_curl_http_client.cpp  test_dashboard_focus_snapshot.cpp  test_data_endpoints.cpp  test_datastore.cpp  test_discovery_merchant_velocity.cpp  test_discovery_supplier_spend.cpp  test_drill_views_snapshot.cpp  test_focus_controller.cpp  test_fuzzy_match.cpp  test_migrations.cpp  test_modal_snapshot.cpp  test_open_browser.cpp  test_plaid_api_client.cpp  test_plaid_service_refactor.cpp  test_plaid_sync_scheduler.cpp  test_plaid_token_broker.cpp  test_remote_backend_storage_service.cpp  test_secret_store.cpp  test_server_healthz.cpp  test_sqlcipher.cpp  test_supplier_map_endpoint.cpp  test_v01_migrator.cpp  test_widgets_snapshot.cpp
tools/monitor/: .gitignore  LICENSE  README.md  greylock-monitor  pyproject.toml
tools/monitor/examples/: config.toml.example
tools/monitor/greylock_monitor/: __init__.py  __main__.py  app.py  config.py  help.py
tools/monitor/greylock_monitor/collectors/: auth.py  greylock.py  network.py  processes.py  sessions.py  system.py
tools/monitor/greylock_monitor/widgets/: _base.py  auth_panel.py  greylock_panel.py  network_panel.py  processes_panel.py  sessions_panel.py  system_panel.py
tools/monitor/tests/: test_collectors_smoke.py
(+210 files in other folders)
